--- a/Web_BanSach/Views/Sach/Index.cshtml
+++ b/Web_BanSach/Views/Sach/Index.cshtml
@@ -66,6 +66,35 @@
                 color: #0f172a;
                 font-weight: bold;
             }
+    .book-card {
+        height: 460px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .book-title {
+        font-size: 14px;
+        height: 42px;
+        line-height: 1.2;
+        overflow: hidden;
+        font-weight: bold;
+    }
+
+    .book-price {
+        font-size: 14px;
+        height: 20px;
+        font-weight: bold;
+    }
+
+    .book-author {
+        font-size: 13px;
+        height: 18px;
+        display: block;
+        overflow: hidden;
+    }
+
+
 </style>
 
 
